--- a/workspace/build
+++ b/workspace/build
@@ -14,3 +14,8 @@ xsltproc -v -o ../README.md utilities/readme.xsl data/_pages.xml;
 xsltproc -v -o ../index.html pages/index.xsl data/index.xml;
 xsltproc -v -o ../discussions/index.html pages/discussions.xsl data/discussions.xml;
 xsltproc -v -o ../discussions/post/index.html pages/discussions_post.xsl data/discussions_post.xml;
+xsltproc -v -o ../questions/index.html pages/questions.xsl data/questions.xml;
+xsltproc -v -o ../blog/index.html pages/blog.xsl data/blog.xml;
+xsltproc -v -o ../showcase/index.html pages/showcase.xsl data/showcase.xml;
+xsltproc -v -o ../events/index.html pages/events.xsl data/events.xml;
+xsltproc -v -o ../about/index.html pages/about.xsl data/about.xml;
