--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "workspace/factory"]
 	path = workspace/factory
-	url = git@github.com:symphonycms/factory.git
+	url = git://github.com/symphonycms/factory.git
