Render HTML for Documentation pages, README and build files

--- a/workspace/build
+++ b/workspace/build
@@ -13,10 +13,6 @@ xsltproc -v -o ../README.md utilities/readme.xsl data/_pages.xml;
 
 xsltproc -v -o ../network/index.html pages/network.xsl data/network.xml;
 xsltproc -v -o ../index.html pages/index.xsl data/index.xml;
-xsltproc -v -o ../docs/index.html pages/documentation.xsl data/documentation.xml;
-xsltproc -v -o ../ext/index.html pages/extensions.xsl data/extensions.xml;
-xsltproc -v -o ../ninjas/index.html pages/ninjas.xsl data/ninjas.xml;
-xsltproc -v -o ../xpathr/index.html pages/xpathr.xsl data/xpathr.xml;
 xsltproc -v -o ../stream/index.html pages/stream.xsl data/stream.xml;
 xsltproc -v -o ../discussions/index.html pages/discussions.xsl data/discussions.xml;
 xsltproc -v -o ../discussions/post/index.html pages/discussions_post.xsl data/discussions_post.xml;
@@ -25,3 +21,13 @@ xsltproc -v -o ../blog/index.html pages/blog.xsl data/blog.xml;
 xsltproc -v -o ../showcase/index.html pages/showcase.xsl data/showcase.xml;
 xsltproc -v -o ../events/index.html pages/events.xsl data/events.xml;
 xsltproc -v -o ../about/index.html pages/about.xsl data/about.xml;
+xsltproc -v -o ../docs/index.html pages/docs.xsl data/docs.xml;
+xsltproc -v -o ../docs/guides/index.html pages/docs_guides.xsl data/docs_guides.xml;
+xsltproc -v -o ../docs/tutorials/index.html pages/docs_tutorials.xsl data/docs_tutorials.xml;
+xsltproc -v -o ../docs/articles/index.html pages/docs_articles.xsl data/docs_articles.xml;
+xsltproc -v -o ../docs/concepts/index.html pages/docs_concepts.xsl data/docs_concepts.xml;
+xsltproc -v -o ../docs/faq/index.html pages/docs_faq.xsl data/docs_faq.xml;
+xsltproc -v -o ../docs/api/index.html pages/docs_api.xsl data/docs_api.xml;
+xsltproc -v -o ../ext/index.html pages/ext.xsl data/ext.xml;
+xsltproc -v -o ../ninjas/index.html pages/ninjas.xsl data/ninjas.xml;
+xsltproc -v -o ../xpathr/index.html pages/xpathr.xsl data/xpathr.xml;
