--- a/workspace/build
+++ b/workspace/build
@@ -13,9 +13,8 @@ xsltproc -v -o ../README.md utilities/readme.xsl data/_pages.xml;
 
 xsltproc -v -o ../index.html pages/index.xsl data/index.xml;
 xsltproc -v -o ../docs/index.html pages/index.xsl data/docs.xml;
-xsltproc -v -o ../guides/index.html pages/docs_guides.xsl data/docs_guides.xml;
-xsltproc -v -o ../tutorials/index.html pages/docs_tutorials.xsl data/docs_tutorials.xml;
-xsltproc -v -o ../articles/index.html pages/docs_articles.xsl data/docs_articles.xml;
+xsltproc -v -o ../intro/index.html pages/docs_intro.xsl data/docs_intro.xml;
 xsltproc -v -o ../concepts/index.html pages/docs_concepts.xsl data/docs_concepts.xml;
-xsltproc -v -o ../faq/index.html pages/docs_faq.xsl data/docs_faq.xml;
+xsltproc -v -o ../workflows/index.html pages/docs_workflows.xsl data/docs_workflows.xml;
+xsltproc -v -o ../projects/index.html pages/docs_projects.xsl data/docs_projects.xml;
 xsltproc -v -o ../api/index.html pages/docs_api.xsl data/docs_api.xml;
